--- a/website/src/layouts/Layout.astro
+++ b/website/src/layouts/Layout.astro
@@ -1,3 +1,12 @@
+---
+import "../styles/global.css";
+import '@fontsource/jersey-15';
+import '@fontsource/vt323';
+import background from '../assets/layout_img.png';
+
+
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -5,10 +14,42 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>RustuPolis - Home</title>
 	</head>
-	<body>
-		<slot />
+	<body class="w-full select-none bg-black" style=`font-family: 'VT323', 'JetBrains Mono',sans-serif;`>
+	<div class="z-[-1] fixed h-[100%] w-[110%] block" style=`font-family: 'VT323', 'JetBrains Mono',sans-serif;background-image: url(${background.src}); background-size: cover; filter: blur(10px)`>
+		a
+	</div>
+		<div class="relative min-h-[13%] w-full flex flex-row gap-20 justify-center items-center shadow-gray-900 shadow-2xl bg-black text-sand text-wrap text-xs">
+			<pre class="hover:opacity-50 cursor-pointer text-[7px]">
+ _____                      _                 _
+|  __ \                    | |               | |
+| |  | | _____      ___ __ | | ___   __ _  __| |
+| |  | |/ _ \ \ /\ / / '_ \| |/ _ \ / _` |/ _` |
+| |__| | (_) \ V  V /| | | | | (_) | (_| | (_| |
+|_____/ \___/ \_/\_/ |_| |_|_|\___/ \__,_|\__,_|
+
+			</pre>
+			<pre>
+ _____           _         _____      _ _
+|  __ \         | |       |  __ \    | (_)
+| |__) |   _ ___| |_ _   _| |__) |__ | |_ ___
+|  _  / | | / __| __| | | |  ___/ _ \| | / __|
+| | \ \ |_| \__ \ |_| |_| | |  | (_) | | \__ \
+|_|  \_\__,_|___/\__|\__,_|_|   \___/|_|_|___/
+			</pre>
+			<pre class="hover:opacity-50 cursor-pointer text-[7px]">
+ _______
+|__   __|
+   | | ___  __ _ _ __ ___
+   | |/ _ \/ _` | '_ ` _ \
+   | |  __/ (_| | | | | | |
+   |_|\___|\__,_|_| |_| |_|
+			</pre>
+		</div>
+		<div class="h-full">
+			<slot />
+		</div>
 	</body>
 </html>
 
