google validation (again 3)

--- a/website/src/layouts/Layout.astro
+++ b/website/src/layouts/Layout.astro
@@ -14,6 +14,7 @@ import background from '../assets/layout_img.png';
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="google-site-verification" content="sUN4561F06Moay0xIJjQcjb8RHbZ7sErzoVTJ2rEp68" />
 		<title>RustuPolis - Home</title>
 	</head>
 	<body class="w-full select-none bg-black" style=`font-family: 'VT323', 'JetBrains Mono',sans-serif;`>
