team page and sitemap

--- a/website/src/layouts/Layout.astro
+++ b/website/src/layouts/Layout.astro
@@ -22,7 +22,8 @@ import background from '../assets/layout_img.png';
 		a
 	</div>
 		<div class="relative min-h-[13%] w-full flex flex-row gap-20 justify-center items-center shadow-gray-900 shadow-2xl bg-black text-sand text-wrap text-xs">
-			<pre class="hover:opacity-50 cursor-pointer text-[7px]">
+			<a href="/rustupolis/downloads">
+				<pre class="hover:opacity-50 cursor-pointer text-[7px]">
  _____                      _                 _
 |  __ \                    | |               | |
 | |  | | _____      ___ __ | | ___   __ _  __| |
@@ -31,6 +32,8 @@ import background from '../assets/layout_img.png';
 |_____/ \___/ \_/\_/ |_| |_|_|\___/ \__,_|\__,_|
 
 			</pre>
+			</a>
+			<a href="/rustupolis/">
 			<pre>
  _____           _         _____      _ _
 |  __ \         | |       |  __ \    | (_)
@@ -39,6 +42,8 @@ import background from '../assets/layout_img.png';
 | | \ \ |_| \__ \ |_| |_| | |  | (_) | | \__ \
 |_|  \_\__,_|___/\__|\__,_|_|   \___/|_|_|___/
 			</pre>
+			</a>
+			<a href="/rustupolis/team">
 			<pre class="hover:opacity-50 cursor-pointer text-[7px]">
  _______
 |__   __|
@@ -47,6 +52,7 @@ import background from '../assets/layout_img.png';
    | |  __/ (_| | | | | | |
    |_|\___|\__,_|_| |_| |_|
 			</pre>
+			</a>
 		</div>
 		<div class="h-full">
 			<slot />
