fix(Website):  Addedplay button href

--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -22,9 +22,9 @@ import Logs_presentation from "../components/homePage/logs_presentation.astro";
 						</div>
 					</div>
 					<div class="flex justify-center items-center text-white text-6xl w-full h-full" style="font-family: 'Jersey 15', sans-serif">
-						<div class="h-fit bg-sand rounded-lg px-2 hover:bg-sand/80 hover:cursor-pointer">
+						<a class="h-fit bg-sand rounded-lg px-2 hover:bg-sand/80 hover:cursor-pointer" href="/rustupolis/downloads">
 							Play
-						</div>
+						</a>
 					</div>
 				</div>
 				<BatInfoPresentation />
