fix(Website):  Fixed height of main div on hompage

--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -12,8 +12,8 @@ import Logs_presentation from "../components/homePage/logs_presentation.astro";
 <Layout>
 		<div id="container" class="h-full">
 			<div class="h-full flex flex-col items-center justify-centertext-black ">
-				<div class="min-h-[87%] w-full flex flex-col items-center">
-					<div class="w-full h-fit py-20 shadow-black shadow-2xl bg-sand/80 flex flex-col justify-center items-center text-9xl text-center">
+				<div class="min-h-[100%] w-full flex flex-col items-center">
+					<div class="w-full h-full py-20 shadow-black shadow-2xl bg-sand/80 flex flex-col justify-center items-center text-9xl text-center">
 						<div>
 							Welcome to RustuPolis
 						</div>
