--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -13,7 +13,7 @@ import Logs_presentation from "../components/homePage/logs_presentation.astro";
 		<div id="container" class="h-full">
 			<div class="h-full flex flex-col items-center justify-centertext-black ">
 				<div class="min-h-[100%] w-full flex flex-col items-center">
-					<div class="w-full h-full py-20 shadow-black shadow-2xl bg-sand/80 flex flex-col justify-center items-center text-9xl text-center">
+					<div class="w-full h-full py-20 text-white shadow-black shadow-2xl bg-sand/80 flex flex-col justify-center items-center text-9xl text-center">
 						<div>
 							Welcome to RustuPolis
 						</div>
@@ -21,8 +21,8 @@ import Logs_presentation from "../components/homePage/logs_presentation.astro";
 							The terminal based city planning game
 						</div>
 					</div>
-					<div class="flex justify-center items-center text-white text-6xl w-full h-full" style="font-family: 'Jersey 15', sans-serif">
-						<a class="h-fit bg-sand rounded-lg px-2 hover:bg-sand/80 hover:cursor-pointer" href="/rustupolis/downloads">
+					<div class="flex justify-center items-center text-white text-8xl w-full h-full" style="font-family: 'Jersey 15', sans-serif">
+						<a class="h-fit bg-sand rounded-xs px-2 hover:bg-sand/80 hover:cursor-pointer" href="/rustupolis/downloads">
 							Play
 						</a>
 					</div>
