feat(Website):  added footer

--- a/website/src/pages/downloads.astro
+++ b/website/src/pages/downloads.astro
@@ -5,6 +5,7 @@ import linuxLogo from "../assets/linux.png"
 import AppleLogo from "../assets/apple.svg"
 import WindowsLogo from "../assets/windows.png"
 import OsCard from "../components/osCard.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <Layout>
@@ -65,5 +66,6 @@ import OsCard from "../components/osCard.astro";
                 <OsCard image_src={AppleLogo.src} os_name="MacOS" />
             </div>
         </div>
+        <Footer />
     </div>
 </Layout>
