--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -1,9 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import astroLogo from '../assets/astro.svg';
+import github from '../assets/github.svg';
 import background from '../assets/layout_img.png';
 import BatInfoPresentation from '../components/homePage/bat_info_presentation.astro';
 import Logs_presentation from "../components/homePage/logs_presentation.astro";
+import Layout_presentation from "../components/homePage/layout_presentation.astro";
+import Footer from "../components/Footer.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -13,7 +15,7 @@ import Logs_presentation from "../components/homePage/logs_presentation.astro";
 		<div id="container" class="h-full">
 			<div class="h-full flex flex-col items-center justify-centertext-black ">
 				<div class="min-h-[100%] w-full flex flex-col items-center">
-					<div class="w-full h-full py-20 text-white shadow-black shadow-2xl bg-sand/80 flex flex-col justify-center items-center text-9xl text-center">
+					<div class="w-full h-full text-white shadow-black shadow-2xl bg-sand/80 flex flex-col justify-center items-center text-9xl text-center">
 						<div>
 							Welcome to RustuPolis
 						</div>
@@ -21,21 +23,35 @@ import Logs_presentation from "../components/homePage/logs_presentation.astro";
 							The terminal based city planning game
 						</div>
 					</div>
-					<div class="  flex justify-center items-center text-white text-8xl w-full h-full" style="font-family: 'Jersey 15', sans-serif">
-						<a class="h-fit shadow-2xl shadow-black rounded-xs px-2 hover:bg-sand/80 hover:cursor-pointer" href="/rustupolis/downloads">
-							<h1 class="">
-								Play
-							</h1>
-						</a>
-						<a class="animate-pulse  absolute h-fit bg-sand rounded-xs px-2 hover:bg-sand/80 hover:animate-none hover:cursor-pointer" href="/rustupolis/downloads">
-							<h1 class="text-str">
-								Play
-							</h1>
+					<div class="flex flex-col gap-10 justify-center items-center text-white text-8xl w-full h-full" style="font-family: 'Jersey 15', sans-serif">
+						<div class="flex">
+							<a class="h-fit shadow-2xl shadow-black rounded-xs px-5 py-1 hover:bg-sand/80 hover:cursor-pointer" href="/rustupolis/downloads">
+								<h1 class="">
+									Play
+								</h1>
+							</a>
+							<a class="animate-pulse  absolute h-fit bg-sand rounded-xs px-5 py-1 hover:bg-sand/80 hover:animate-none hover:cursor-pointer" href="/rustupolis/downloads">
+								<h1 class="text-str">
+									Play
+								</h1>
+							</a>
+						</div>
+						<a href="https://github.com/Deadelineurz/rustupolis" class="flex flex-row text-6xl align-middle items-center  gap-5 justify-center px-10 py-1 rounded-xs  bg-black">
+							<span>
+								Get on
+							</span>
+							<div class="">
+								<svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+									<path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+								</svg>
+							</div>
 						</a>
 					</div>
 				</div>
 				<BatInfoPresentation />
 				<Logs_presentation />
+				<Layout_presentation />
+				<Footer />
 			</div>
 		</div>
 		<style>
