fix(Website):  github link

--- a/website/src/components/Footer.astro
+++ b/website/src/components/Footer.astro
@@ -14,7 +14,7 @@
         <div>
             <p class="text-3xl">
                 Follow us on:
-                <a href="https://github.com/RustuPolis" class="text-sand hover:opacity-50 mx-1">GitHub</a>
+                <a href="https://github.com/Deadelineurz/rustupolis" class="text-sand hover:opacity-50 mx-1">GitHub</a>
             </p>
         </div>
     </div>
