--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -6,6 +6,7 @@ import BatInfoPresentation from '../components/homePage/bat_info_presentation.as
 import Logs_presentation from "../components/homePage/logs_presentation.astro";
 import Layout_presentation from "../components/homePage/layout_presentation.astro";
 import Footer from "../components/Footer.astro";
+import Asciinema_presentation from "../components/homePage/asciinema_presentation.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -51,6 +52,7 @@ import Footer from "../components/Footer.astro";
 				<BatInfoPresentation />
 				<Logs_presentation />
 				<Layout_presentation />
+				<Asciinema_presentation />
 				<Footer />
 			</div>
 		</div>
