--- a/website/src/components/homePage/asciinema_presentation.astro
+++ b/website/src/components/homePage/asciinema_presentation.astro
@@ -4,7 +4,7 @@ import myRecordedCast from '../assets/Demo.cast?url';
 import { TerminalPlayer } from 'astro-terminal-player';
 ---
 
-<div id="logs" class="w-full h-full pb-12 gap-10 flex flex-row-reverse justify-between px-20 py-5" style="font-family: 'Jersey 15', sans-serif">
+<div id="logs" class="w-full h-full pb-12 bg-sand/80 flex flex-row justify-between px-20 py-5" style="font-family: 'Jersey 15', sans-serif">
     <div class="flex flex-row-reverse w-full justify-center">
         <script src="https://asciinema.org/a/713500.js" id="asciicast-713500" />
 
