--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -7,6 +7,7 @@ import Logs_presentation from "../components/homePage/logs_presentation.astro";
 import Layout_presentation from "../components/homePage/layout_presentation.astro";
 import Footer from "../components/Footer.astro";
 import Asciinema_presentation from "../components/homePage/asciinema_presentation.astro";
+import Procedurale_gen from "../components/homePage/procedurale_gen.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -52,6 +53,7 @@ import Asciinema_presentation from "../components/homePage/asciinema_presentatio
 				<BatInfoPresentation />
 				<Logs_presentation />
 				<Layout_presentation />
+				<Procedurale_gen />
 				<Asciinema_presentation />
 				<Footer />
 			</div>
